[package]
name = "search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = { version = "0.18.0", features = ["crossterm"], default-features = false }
crossterm = "0.24.0"
chrono = "0.4"
regex = "1.5"
bytesize =  "1.1.0"
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
num-format = "0.4.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
